Revision history for Apache::AuthCookie

{{$NEXT}}
   - login_form: return OK for mobile IE 10, which also ignores content for
     FORBIDDEN response.
   - test .pl registry scripts: do not try to load mod_perl.pm

3.19  2012-12-28
   - split out CGI data handling into ::AuthCookie::Params modules
   - use Apache::Request/Apache2::Request from libapreq if available. Otherwise,
     fall back to CGI.pm for handling CGI data.
   - improve "removed cookie" debug log message
   - add dependencies: autobox, Class::Load
   - allow username to be '0'
   - login_form: return OK for SymbianOS, which ignores content for FORBIDDEN responses.
   - add login_form_status() to override HTTP status returned by login form
   - recognize_user: return DECLINED if user is not recognized

3.18  2011-01-24
   - remove 3.17's test skip hacks, and bump Apache::Test prerequisite to v1.35
     which fixes this issue.
   - fix MANIFEST.SKIP to ignore generated t/conf/mime.types
   - remove dist.ini, weaver.ini from dists
   - fixed t/real.t to use correct -withtestmore import syntax
   - rename sample authcookie handlers to Sample::Apache and Sample::Apache2
     namespaces

3.17  2011-01-19
   - skip the test suite if running as root.  Apache::Test 1.34 fails the test
     suite if running as root instead of skipping it.  By skipping, AuthCookie can
     be installed via CPAN.pm as root.

3.16  2011-01-19
   - require Apache::Test 1.32 - fixes ubuntu build issue
   - remove mod_perl/mod_perl2 related prereq's from META.yml.  The correct mod
     perl version is not known until Makefile.PL is run.  CPAN.pm should not
     try to install either one until it is known which one is appropriate.
     (RT 64926)

3.15  2010-08-27
   - enable Dist::Zilla Manifest plugin
   - add FAQ
   - add FAQ entry on how to protect an entire site/document root
   - recognize_user: return DECLINED if user is already set
   - refactor P3P header generation into send_p3p($r) so subclasses can overload it
