@@ -185,7 +185,7 @@ sub login {
     unless ($ses_key) {
         $r->server->log_error("Bad credentials") if $debug >= 2;
         $r->subprocess_env('AuthCookieReason', 'bad_credentials');
-        $r->uri($params->param('destination'));
+        $r->uri($self->untaint_destination($params->param('destination')));
         return $auth_type->login_form($r);
     }
 
