@@ -4,6 +4,7 @@ Revision history for Apache::AuthCookie
    - login_form: return OK for mobile IE 10, which also ignores content for
      FORBIDDEN response.
    - test .pl registry scripts: do not try to load mod_perl.pm
+   - escape html tags in destination.
 
 3.19  2012-12-28
    - split out CGI data handling into ::AuthCookie::Params modules
